--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
 /* Utils */
 
 .container {
-  max-width: 1200px;
+  max-width: 1000px;
   margin: 0 auto;
 }
 
@@ -131,19 +131,6 @@ header {
   
 
 
-
-
-
-
-
-
- 
-  
-
-
-  
-  
-
 /* # Main & sections */
 section {
   padding: 50px;
@@ -155,19 +142,43 @@ section > .container {
 }
 
 .flex > .small-col {
-  flex-basis: 40%;
-  background-color: pink;
+  flex-basis: 28%;
+  margin: 0 60px;
 }
-
+ 
+  
 .flex > .large-col {
   flex-basis: 60%;
-  background-color: dodgerblue;
 }
-
+  
 .flex > .full-col {
   flex-basis: 100%;
   background-color: darkgreen;
 }
+
+.small-col > h3 {
+  font-size: 35px;
+  margin-top: 30px;
+}
+
+.small-col > p {
+  font-size: 15px;
+  margin-top: 20px;
+}
+  
+.large-col img {
+  width: 500px;
+  margin: 0 45px;
+}
+
+
+ 
+  
+
+
+  
+  
+
 
 /* # Footer */
 
