--- a/css/style.css
+++ b/css/style.css
@@ -201,54 +201,120 @@ h6 {
   
   
   
-
-
 /* # Footer */
 
 footer {
   padding: 50px;
   background-color: #23272a;
-  /* color: white; */
+  color: white;
 }
 
 .footer-top {
-  height: 600px;
+  height: 400px;
   padding-bottom: 30px;
   margin-bottom: 30px;
-  border-bottom: 1px solid purple;
-
+  border-bottom: 1px solid rgb(168,182,232);
   display: flex;
 }
 
 .footer-top .footer-left {
   flex-basis: 30%;
-  background-color: pink;
 }
-
+  
 .footer-top .footer-right {
   flex-basis: 70%;
-  background-color: #20b2aa;
 }
+
 
 .footer-nav {
   height: 100%;
   display: flex;
-  /* background-color: #fff; */
 }
+  
 
 .footer-nav > div {
   flex-basis: 25%;
 }
+  
 
 .footer-bottom {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px;
-  background-color: aquamarine;
+}
+  
+.footer-bottom > * {
+  padding: 0 10px;
+}
+ 
+.footer-left > h3 {
+  font-size: 30px;
+  margin-top: 3px;
+  margin-bottom: 20px;
+  color: rgb(110,132,210);
 }
 
-.footer-bottom > * {
-  padding: 5px 10px;
-  background-color: yellow;
+.footer-left img {
+  width: 25px;
 }
+
+#italian {
+  font-size: 11px;
+  padding: 5px;
+}
+
+.icons {
+  margin: 20px 0;
+}
+
+.special-icons {
+  margin: 0 10px;
+}
+
+li {
+  list-style-type: none;
+  margin-bottom: 12px;
+}
+  
+a {
+  text-decoration: none;
+  color: white;
+}
+
+ul li:first-child a{
+  color: rgb(110,132,210);
+}
+
+.nav-col {
+  margin-top: 10px;
+}
+
+.footer-bottom img {
+  width: 110px;
+}
+
+button {
+  border: currentColor;
+  background-color: rgb(168,182,232);
+  color: white;
+  font-weight: bold;
+  font-size: 10px;
+  width: 65px;
+  height: 25px;
+  border-radius: 20px;
+}
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+  
